Changelog
=========


1.6.3 (unreleased)
------------------

- Generic Setup uninstall test: test that there is an uninstall external method.
  Uninstall external methods are still necessary today for properly uninstalling
  a package.
  [jone]


1.6.2 (2014-04-30)
------------------

- Generic Setup test: use quickinstaller for uninstalling.
  [jone]


1.6.1 (2014-04-29)
------------------

- Also install profile dependencies before creating a snapshot.
  [deif]


1.6.0 (2014-04-29)
------------------

- Implement Generic Setup uninstall base test.
  [jone]


1.5.2 (2014-02-09)
------------------

- Fix ``isinstance`` calls of freezed time in ``freeze`` context manager.
  [jone]


1.5.1 (2014-02-08)
------------------

- Implement ``freeze`` context manager for freezing the time.
  [jone]


1.5.0 (2013-09-24)
------------------

- AT form page object: add schemata helper methods for testing visible
  schematas and fields.
  [jone]


1.4 (2013-08-26)
----------------

- Add custom mailhost class, remembering the sender and recipient
  of each email separately.
  [deif]

- Deprecate @javascript because Selenium with PhantomJS is too unstable.
  Removes tests and documentation, the @javascript decorator still works
  for now but needs to be imported from ftw.testing.browser.
  [jone]

- Page objects: add a Plone.visit(obj) function.
  [jone]

- Fix a rare bug where the MockMailHost message list has been replaced by
  another instance.
  [jone, deif]


1.3.1 (2013-05-24)
------------------

- Move ``Mailing`` helper class to its own module ``mailing``.
  [deif]


1.3 (2013-05-03)
----------------

- Drop official Plone 4.0 support.
  [jone]

- Component registry layer: use isolated ZCML layers.
  When using the same layer instances it may conflict with integration or
  functional testing layers.
  [jone]

- Add splinter integration and Plone page objects.
  [jone]

- onegov.ch approved: add badge to readme.
  [jone]
